--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@
   left:1%;
   width:  14.5%;
   height: 100%;
-  border: solid 2px #f28b0c;
+  border: solid 2px #261fb5;
   list-style: none;
 }
 
