likes and angry icon

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -453,3 +453,22 @@ nav.navbar {
   color: #fff !important;
   background-color: #f44336 !important
 }
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48,
+  'color'red
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
