--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@
   right: 1%;
   width: 18%;
   height: 23%;
-  border: solid 2px red;
+  border: solid 2px rgba(3, 102, 120, 0.499);
 }
 
 #siderbarright2 {
