--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,22 +20,22 @@
 
 #siderbarright1 {
   position: fixed;
-  top: 23%;
+  top: 10%;
   float: right;
   right: 1%;
   width: 18%;
-  height: 23%;
-  border: solid 2px rgba(112, 3, 120, 0.499);
+  height: 60%;
+  border: solid 2px rgba(54, 187, 79, 0.499);
 }
 
 #siderbarright2 {
   position: fixed;
-  bottom: 40px;
+  bottom: 10px;
   float: right;
   right: 1%;
   width: 18%;
-  height: 43%;
-  border: solid 2px rgba(0, 255, 55, 0.808)
+  height: 10%;
+  border: solid 2px rgba(56, 66, 178, 0.808)
 }
 
 #siderbarindex {
@@ -495,3 +495,5 @@ nav.navbar {
     'GRAD' 0,
     'opsz' 48
 }
+
+/* 回覆格式 */
