--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@
   right: 1%;
   width: 18%;
   height: 60%;
-  border: solid 2px rgba(54, 187, 79, 0.499);
+  border: solid 2px rgba(112, 3, 120, 0.499);
 }
 
 #siderbarright2 {
@@ -35,7 +35,7 @@
   right: 1%;
   width: 18%;
   height: 10%;
-  border: solid 2px rgba(56, 66, 178, 0.808)
+  border: solid 2px rgba(0, 255, 55, 0.808)
 }
 
 #siderbarindex {
@@ -505,4 +505,79 @@ nav.navbar {
 .form-group .form-control {
   width: 100% !important;
   height: 100% !important;
+}
+
+/* 讚和收藏樣式 */
+.fa-thumbs-down,
+.fa-thumbs-o-down {
+  transform: rotateY(180deg);
+
+}
+
+.bluei {
+  color: blue;
+}
+
+.redi {
+  color: red;
+}
+
+
+/* 回覆文章留言樣式 */
+
+.typing-area {
+  padding: 18px 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.typing-area input {
+  height: 45px;
+  width: calc(100% - 58px);
+  font-size: 16px;
+  padding: 0 13px;
+  border: 1px solid #e6e6e6;
+  outline: none;
+  border-radius: 5px 0 0 5px;
+}
+
+.typing-area button {
+  color: #fff;
+  width: 55px;
+  border: none;
+  outline: none;
+  background: #333;
+  font-size: 19px;
+  opacity: 0.7;
+  pointer-events: none;
+  border-radius: 0 5px 5px 0;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.typing-area button.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.input-content[placeholder]:empty:before {
+  content: attr(placeholder);
+  color: #555;
+}
+
+.input-content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.input-content {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.input-content {
+  overflow-y: scroll;
+  /* Add the ability to scroll 增加滾輪功能*/
 }
