--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,21 +20,21 @@
 
 #siderbarright1 {
   position: fixed;
-  top: 23%;
+  top: 10%;
   float: right;
   right: 1%;
   width: 18%;
-  height: 23%;
+  height: 60%;
   border: solid 2px rgba(112, 3, 120, 0.499);
 }
 
 #siderbarright2 {
   position: fixed;
-  bottom: 40px;
+  bottom: 10px;
   float: right;
   right: 1%;
   width: 18%;
-  height: 43%;
+  height: 10%;
   border: solid 2px rgba(0, 255, 55, 0.808)
 
 }
@@ -224,7 +224,7 @@ nav.navbar {
   border-width: 0;
   color: gray;
   background-color: gray;
-  width: 100%;
+  width: 90%;
 }
 
 
@@ -238,6 +238,23 @@ nav.navbar {
 .userspicture1 {
   background-image: url('assets/img/bell.png');
   background-size: 100%;
+}
+
+.bell {
+  font-family: "微軟正黑體";
+  font-weight: bold;
+  position: fixed;
+  top: -200px;
+  right: 4%;
+  height: 130px;
+  width: 300px;
+  background-color: #fff;
+  color: #7F7F7F;
+  padding: 20px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 20px;
+  -webkit-box-shadow: 0 1px 5px #333;
+  z-index: 101;
 }
 
 /* 註冊、登入、會員資訊頁提示訊息 */
@@ -497,6 +514,12 @@ nav.navbar {
   'opsz' 48
 }
 
+/* 回覆格式 */
+
+.form-group .form-control {
+  width: 100% !important;
+  height: 100% !important;
+}
 
 /* 讚和收藏樣式 */
 .fa-thumbs-down, .fa-thumbs-o-down {
@@ -510,6 +533,7 @@ nav.navbar {
 .redi {
   color: red;
 }
+
 
 
 /* 回覆文章留言樣式 */
