--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@
   margin: 0;
   font-family: "微軟正黑體";
   font-weight: bold;
+  background-color:#FFF5EE;
 
 }
 
@@ -20,32 +21,22 @@
 
 #siderbarright1 {
   position: fixed;
-  top: 10%;
+  top: 20%;
   float: right;
   right: 1%;
-  width: 18%;
-  height: 60%;
-  border: solid 2px rgba(112, 3, 120, 0.499);
+  width: 20%;
+  height: 100%;
+ 
 }
 
-#siderbarright2 {
-  position: fixed;
-  bottom: 10px;
-  float: right;
-  right: 1%;
-  width: 18%;
-  height: 10%;
-  border: solid 2px rgba(0, 255, 55, 0.808)
-
-}
 
 #siderbarindex {
   position: relative;
   float: right;
-  right: 20%;
-  top: 97px;
-  width: 62%;
-  height: 100%;
+  right: 21%;
+  top: 60px;
+  width: 60%;
+  height: 90%;
 
 }
 
@@ -111,7 +102,7 @@ nav.navbar {
 
 #sidebar ul li a:hover {
   color: #f2680c;
-  background: gainsboro;
+
 }
 
 .fas,
@@ -121,7 +112,7 @@ nav.navbar {
 }
 
 
-@media (max-width:770px) {
+@media (max-width:900px) {
   #sidebar {
     margin-left: -110px;
     width: 150px;
@@ -144,7 +135,7 @@ nav.navbar {
 .back-to-top {
   display: none;
   position: fixed;
-  bottom: 15%;
+  bottom:1
   right: 22.5%;
   z-index: 99;
   border: 2px solid #ff513a;
@@ -165,11 +156,11 @@ nav.navbar {
 
 
 
-/*廣告樣式*/
+/*發文樣式*/
 
 .go-posts {
   position: fixed;
-  bottom: 2%;
+  bottom: 5%;
   right: 22%;
   z-index: 99;
   border: 2px solid #CFDEED;
@@ -197,7 +188,7 @@ nav.navbar {
 	top: -200px;
 	right:4%;
   height: 130px;
-	width: 300px;
+	width: 200px;
 	background-color: #fff;
 	color: #7F7F7F;
 	padding: 20px;
