--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,11 +21,20 @@
 
 #siderbarright1 {
   position: fixed;
-  top: 20%;
+  top: 15%;
   float: right;
   right: 1%;
   width: 20%;
-  height: 100%;
+  height: 30%;
+ 
+}
+
+#siderbarright2 {
+  position: fixed;
+  bottom:1px;
+  float: right;
+  right: 6%;
+
  
 }
 
@@ -34,7 +43,7 @@
   position: relative;
   float: right;
   right: 21%;
-  top: 60px;
+  top: 80px;
   width: 60%;
   height: 90%;
 
@@ -135,7 +144,7 @@ nav.navbar {
 .back-to-top {
   display: none;
   position: fixed;
-  bottom:1
+  bottom:5%;
   right: 22.5%;
   z-index: 99;
   border: 2px solid #ff513a;
@@ -161,7 +170,7 @@ nav.navbar {
 .go-posts {
   position: fixed;
   bottom: 5%;
-  right: 22%;
+  right: 25%;
   z-index: 99;
   border: 2px solid #CFDEED;
   outline: none;
