--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@
   margin: 0;
   font-family: "微軟正黑體";
   font-weight: bold;
+  background-color:#FFF5EE;
 
 }
 
@@ -20,32 +21,31 @@
 
 #siderbarright1 {
   position: fixed;
-  top: 10%;
+  top: 15%;
   float: right;
   right: 1%;
-  width: 18%;
-  height: 60%;
-  border: solid 2px rgba(112, 3, 120, 0.499);
+  width: 20%;
+  height: 30%;
+ 
 }
 
 #siderbarright2 {
   position: fixed;
-  bottom: 10px;
+  bottom:1px;
   float: right;
-  right: 1%;
-  width: 18%;
-  height: 10%;
-  border: solid 2px rgba(0, 255, 55, 0.808)
+  right: 6%;
 
+ 
 }
+
 
 #siderbarindex {
   position: relative;
   float: right;
-  right: 20%;
-  top: 97px;
-  width: 62%;
-  height: 100%;
+  right: 21%;
+  top: 80px;
+  width: 60%;
+  height: 90%;
 
 }
 
@@ -111,7 +111,7 @@ nav.navbar {
 
 #sidebar ul li a:hover {
   color: #f2680c;
-  background: gainsboro;
+
 }
 
 .fas,
@@ -121,7 +121,7 @@ nav.navbar {
 }
 
 
-@media (max-width:770px) {
+@media (max-width:900px) {
   #sidebar {
     margin-left: -110px;
     width: 150px;
@@ -144,8 +144,8 @@ nav.navbar {
 .back-to-top {
   display: none;
   position: fixed;
-  bottom: 15%;
-  right: 22.5%;
+  bottom:5%;
+  right:22;
   z-index: 99;
   border: 2px solid #ff513a;
   outline: none;
@@ -165,18 +165,18 @@ nav.navbar {
 
 
 
-/*廣告樣式*/
+/*發文樣式*/
 
 .go-posts {
   position: fixed;
-  bottom: 2%;
-  right: 22%;
+  bottom: 5%;
+  right: 30%;
   z-index: 99;
   border: 2px solid #CFDEED;
   outline: none;
   background-color: #fff;
   cursor: pointer;
-  padding: 10px ;
+  padding: 5px ;
   font-weight: bold;
   font-size: 10px;
   border-radius: 30px;
@@ -197,7 +197,7 @@ nav.navbar {
 	top: -200px;
 	right:4%;
   height: 130px;
-	width: 300px;
+	width: 200px;
 	background-color: #fff;
 	color: #7F7F7F;
 	padding: 20px;
